renomage AppSharedProps.appName

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
 		root.AppSharedProps = {
-		    "appName":"hornetshowroom-online",
+		    "appName":"hornet-showroom-online",
                     "appVersion":"5.1.0",
                     "appDescription":"Application documentaire du Framework hornet",
                     "appAuthor":"MEAE - Ministère de l'Europe et des Affaires étrangères",
